Fixes image height (#11)
The height of some images at the blog was distorted after a WordPress update. CSS auto height is now applied to all images.

refs #10

--- a/style.css
+++ b/style.css
@@ -55,6 +55,10 @@ a {
 	margin-top: 20px;
 }
 
+.wp-block-image img {
+	height: auto;
+}
+
 /**********************
  Header
  ***********************/
